--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,13 +1,11 @@
 .header {
   font-size: 50px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  margin: 30px 0;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .contacts {
   font-size: 50px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  margin: 30px 0;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .form {
@@ -19,7 +17,7 @@
   width: 50vw;
   font-size: 15px;
   font-weight: 600;
-  padding-top: 8px;
+  padding-top: 10px;
 }
 
 input {
@@ -38,9 +36,9 @@ input:focus {
 
 .formBtn {
   color: #fff;
-  padding: 10px 20px;
+  padding: 15px 0;
   font-size: 15px;
-  margin-top: 15px;
+  margin-top: 20px;
   font-weight: 700;
   border-radius: 5px;
   border: none;
