--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,7 +1,7 @@
 .contactList {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   list-style: decimal;
   font-size: 15px;
   font-weight: 600;
