--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -9,7 +9,7 @@ input {
   color: #6e6d70;
   width: 50vw;
   font-size: 15px;
-  border: 1px solid #6e6d70;
+  border: 1px solid darkgrey;
   border-radius: 5px;
   padding: 10px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
